--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.84.1",
     "clsx": "^2.1.1",
     "googleapis": "^154.1.0",
+    "lottie-react": "^2.4.1",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
